added error checking for invalid inputs when creating a survey

--- a/public/create.html
+++ b/public/create.html
@@ -17,6 +17,7 @@
         </div>
         <button id="add">Add Extra Answer Option</button>
         <button id="create">Create</button>
+        <div id="error"></div>
     </form>
 </body>
 </html>
