added a home page link

--- a/public/create.html
+++ b/public/create.html
@@ -8,6 +8,7 @@
     <script defer src="create.js"></script>
 </head>
 <body>
+    <a class="home" href="https://kervey.herokuapp.com/">Back To Home Page</a>
     <form action="" onsubmit="return false">
         <div id="inputdata">
             <input type="text" placeholder="Question" name="question" id="question">
