--- a/public/question.html
+++ b/public/question.html
@@ -8,6 +8,7 @@
     <script defer src="/question.js"></script>
 </head>
 <body>
+    <a class="home" href="https://kervey.herokuapp.com/">Back To Home Page</a>
    <section class="survey">
        <div class="question"></div>
        <div class="answers"></div>
