--- a/public/view.html
+++ b/public/view.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.clipartmax.com%2Fpng%2Fmiddle%2F118-1180716_clipboard-note-paper-document-icon-emoji-%25F0%259F%2593%258B.png&f=1&nofb=1" />
 </head>
 <body>
+    <a class="home" href="https://kervey.herokuapp.com/">Back To Home Page</a>
     <header>
         <h1 id="code">Code: </h1>
     </header>
