added delete button

--- a/public/create.html
+++ b/public/create.html
@@ -17,7 +17,9 @@
 
         </div>
         <button id="add">Add Extra Answer Option</button>
+        <button id="delete">Delete</button>
         <button id="create">Create</button>
+
         <div id="error"></div>
     </form>
 </body>
